# telemetry-bot

./: .dockerignore  .env  Cargo.toml  Dockerfile  Dockerfile.alpine  README.md  build.rs  codefresh.yml
db/: Cargo.toml  build.rs
db/migrations/: V1__init.sql  V1__metrics.sql  V1__prometheus.sql
db/scripts/: init.sql
db/src/: main.rs
src/: debug.rs  encoding.rs  export.rs  main.rs  migrations.rs  parser.rs  prometheus_api.rs  prometheus_timeseries.rs  schema.rs  scrape.rs  series.rs  timeseries.rs
src/scrape/: detect.rs  metrics.rs  mod.rs
storage_remote_write/: Cargo.toml  README.md
storage_remote_write/src/: lib.rs
storage_standalone/: Cargo.toml  README.md
storage_standalone/sql/: base_schema.sql  histogram_schema.sql
storage_standalone/sql/idempotent/: matcher-functions.sql
storage_standalone/sql/preinstall/: 002-schemas.sql
storage_standalone/src/: lib.rs  schema.rs
telemetry_bot/: Cargo.toml  README.md
telemetry_bot/src/: config.rs  main.rs  storage.rs
telemetry_connector/: Cargo.toml  README.md
telemetry_connector/sql/: histogram.sql  histogram_schema.sql
telemetry_connector/src/: lib.rs
telemetry_core/: Cargo.toml  README.md
telemetry_core/src/: debug.rs  error.rs  lib.rs  parser.rs  scrape.rs
telemetry_core/src/storage/remote_write/: mod.rs
telemetry_core/src/storage/standalone/: README.md  encoding.rs  mod.rs  schema.rs
telemetry_core/src/storage/standalone/sql/: README.md
telemetry_core/src/storage/standalone/sql/idempotent/: base.sql
telemetry_core/src/storage/standalone/sql/preinstall/: 001-users.sql  003-tables.sql  004-matcher_operators.sql
telemetry_prometheus/: Cargo.toml  README.md
telemetry_prometheus/src/: debug.rs  error.rs  lib.rs  parser.rs  scrape.rs
telemetry_remote_write/: Cargo.toml  README.md
telemetry_remote_write/src/: lib.rs
telemetry_schema/: Cargo.toml  README.md
telemetry_schema/src/: lib.rs
telemetry_standalone/: Cargo.toml  README.md
telemetry_standalone/db/migrations/: V1__catalog.sql
telemetry_standalone/db/scripts/: init.sql
