[package]
name = "telemetry-bot"
version = "0.1.0"
authors = ["Kevin Stenerson <kstenerson@auditboard.com>"]
edition = "2018"

[workspace]
members = [
    "db",
]

[dependencies]
anyhow = "1.0.31"
async-std = { version = "1.5.0" }
chrono = "0.4.11"
ctrlc = { version = "3.1.4", features = ["termination"] } # handle SIGINT (and SIGTERM)
dotenv = "0.15.0"
futures = "0.3.5"
serde = "1.0.111"
serde_json = "1.0.53"
sqlx = { version = "0.3.5", features = ["chrono", "json", "postgres"] }
surf = { version = "2.0.0-alpha.3", default_features = false, features = ["encoding", "h1-client"] }
