[package]
name = "telemetry-bot"
version = "0.1.0"
authors = ["Kevin Stenerson <kstenerson@auditboard.com>"]
edition = "2018"

[workspace]
members = [
    "db",
]

[dependencies]
anyhow = "1.0.31"
arc-swap = "0.4.7"
async-std = { version = "1.5.0" }
chrono = "0.4.11"
ctrlc = { version = "3.1.4", features = ["termination"] } # handle SIGINT (and SIGTERM)
dotenv = "0.15.0"
futures = "0.3.5"
heck = "0.3.1"
k8s-openapi = { version = "0.8.0", features = ["v1_18"] }
kube = { version = "0.34.0", default-features = false, features = ["rustls-tls"] }
parallel-stream = "2.1.1"
parking_lot = "0.10.2"
serde = "1.0.111"
serde_json = "1.0.53"
sqlx = { version = "0.3.5", features = ["chrono", "json", "postgres", "tls"] }
surf = { version = "2.0.0-alpha.4", default_features = false, features = ["encoding", "h1-client"] }

# Enable compatibiltiy with `tokio`-based libaries
smol = { version = "0.1.11", features = ["tokio02"] }
