[package]
name = "telemetry-standalone"
version = "0.1.0"
authors = ["Kevin Stenerson <kstenerson@auditboard.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
async-std = "1.6.2"
chrono = "0.4.11"
lasso = { version = "0.2.2", features = ["ahasher", "multi-threaded"] }
sqlx = { version = "0.3.5", features = ["chrono", "json", "postgres", "tls"] }
telemetry-core = { path = "../telemetry_core" }
dashmap = "3.11.4"
serde_json = "1.0.56"
