[package]
name = "telemetry-standalone"
version = "0.1.0"
authors = ["Kevin Stenerson <kstenerson@auditboard.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
async-std = "1.6.2"
chrono = "0.4.11"
dashmap = "3.11.4"
lasso = { version = "0.3.0", features = ["ahasher", "multi-threaded"] }
serde_json = "1.0.56"
sqlx = { version = "0.3.5", features = ["chrono", "json", "postgres", "tls"] }
telemetry-core = { path = "../telemetry_core" }
unsigned-varint = "0.4.0"
crossbeam = "0.7.3"
