[package]
name = "telemetry-standalone"
version = "0.1.0"
authors = ["Kevin Stenerson <kstenerson@auditboard.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
chrono = "0.4.15"
dashmap = "4.0.0-rc6"
lasso = { version = "0.3.0", features = ["ahasher", "multi-threaded"] }
serde_json = "1.0.56"
telemetry-core = { path = "../telemetry_core" }

native-tls = "0.2.4"
postgres = "0.17.5"
postgres-native-tls = "0.3.0"
r2d2 = "0.8.9"
r2d2_postgres = "0.16.0"
unsigned-varint = "0.4.0"
crossbeam-queue = "0.2.3"
semver = "0.10.0"
