[package]
name = "telemetry-bot"
version = "0.1.0"
authors = ["Kevin Stenerson <kstenerson@auditboard.com>"]
edition = "2018"
default-run = "telemetry-bot"

[features]
default = [
    "storage-remote-write",
    "storage-timescale-standalone",
]
storage-remote-write = ["telemetry-remote-write"]
# # TODO: Implement writing metrics directly to the prometheus schema
# storage-timescale-prometheus = []
storage-timescale-standalone = ["telemetry-schema"]

[dependencies]
anyhow = "1.0.31"
async-std = "1.5.0"
async-trait = "0.1.35"
chrono = "0.4.11"
ctrlc = { version = "3.1.4", features = ["termination"] } # handle SIGINT (and SIGTERM)
dotenv = "0.15.0"
futures = "0.3.5"
heck = "0.3.1"
kube = { version = "0.34.0", default-features = false, features = ["rustls-tls"] }
num_cpus = "1.13.0"
parallel-stream = "2.1.1"
parking_lot = "0.10.2"
piper = "0.1.3"
sqlx = { version = "0.3.5", features = ["postgres", "tls"] }

# Local dependencies
telemetry-prometheus = { path = "../telemetry_prometheus" }
telemetry-remote-write = { path = "../telemetry_remote_write", optional = true }
telemetry-schema = { path = "../telemetry_schema", optional = true }

# Enable compatibiltiy with `tokio`-based dependencies (the `kube` crate)
smol = { version = "0.1.11", features = ["tokio02"] }
structopt = "0.3.15"
