[package]
name = "telemetry-bot"
version = "0.1.0"
authors = ["Kevin Stenerson <kstenerson@auditboard.com>"]
edition = "2018"
default-run = "telemetry-bot"

[features]
default = [
    "storage-remote-write",
    "storage-timescale-standalone",
]
storage-remote-write = ["telemetry-core/storage-remote-write"]
storage-timescale-standalone = ["telemetry-core/storage-timescale-standalone"]

[dependencies]
anyhow = "1.0.31"
async-trait = "0.1.35"
chrono = "0.4.11"
ctrlc = { version = "3.1.4", features = ["termination"] } # handle SIGINT (and SIGTERM)
dotenv = "0.15.0"
futures = "0.3.5"
heck = "0.3.1"
num_cpus = "1.13.0"
parking_lot = "0.11.0"
piper = "0.1.3"
structopt = "0.3.15"
telemetry-core = { path = "../telemetry_core" }
