[package]
name = "telemetry-connector"
version = "0.1.0"
authors = ["Kevin Stenerson <kstenerson@auditboard.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
async-std = "1.6.2"
chrono = "0.4.11"
lasso = { version = "0.2.2", features = ["ahasher", "multi-threaded"] }
sqlx = { version = "0.3.5", features = ["chrono", "postgres", "tls"] }
telemetry-prometheus = { path = "../telemetry_prometheus" }
dashmap = "3.11.4"
