[package]
name = "telemetry-core"
version = "0.1.0"
authors = ["Kevin Stenerson <kstenerson@auditboard.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
arc-swap = "0.4.7"
async-std = "1.6.2"
chrono = "0.4.11"
futures = "0.3.5"
indexmap = "1.4.0"
k8s-openapi = { version = "0.8.0", features = ["v1_18"] }
kube = { version = "0.35.1", default-features = false, features = ["rustls-tls"] }
parking_lot = "0.11.0"
surf = { version = "2.0.0-alpha.4", default_features = false, features = ["encoding", "h1-client"] }
url = "2.1.1"

# Enable compatibiltiy with `tokio`-based dependencies (the `kube` crate)
smol = { version = "0.1.11", features = ["tokio02"] }
thiserror = "1.0.20"
