[package]
name = "telemetry-remote-write"
version = "0.1.0"
authors = ["Kevin Stenerson <kstenerson@auditboard.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
prost = "0.6.1"
snap = "1.0.0"
surf = { version = "2.0.0-alpha.4", default_features = false, features = ["encoding", "h1-client"] }
telemetry-prometheus = { path = "../telemetry_prometheus" }
