[package]
name = "telemetry-standalone"
version = "0.1.0"
authors = ["Kevin Stenerson <kstenerson@auditboard.com>"]
edition = "2018"

[[bin]]
name = "telemetry-migrate"
path = "src/bin/migrate.rs"

[dependencies]
anyhow = "1.0.31"
async-std = "1.6.2"
chrono = "0.4.11"
dotenv = "0.15.0"
serde_json = "1.0.53"
sqlx = { version = "0.3.5", features = ["chrono", "json", "postgres", "tls"] }
telemetry-prometheus = { path = "../telemetry_prometheus" }
